# ag-exams

./: .gitignore  assemble_master.py  convert_pdf.py  eval_q17.py  fix_quarto_lists.py  format_exam.py  format_options.py  generate_all.sh  generate_rest_sequentially.sh  logs_final_hamsterdam.txt  logs_final_procedural_block.txt  logs_final_the_blowback.txt  logs_final_the_distribution_ring.txt  logs_final_the_empire_business.txt  logs_final_the_genesis.txt  make_lists_loose.py  print_q03.py  pyproject.toml  qa_results.md  qa_results_final.md  qa_results_padded.md  qa_results_padded_final.md  qa_results_padded_final_v2.md  qa_results_padded_final_v3.md  qa_results_padded_final_v4.md  qa_results_padded_final_v5.md  qa_results_round2.md  qa_results_round3.md  qa_results_round4.md  qa_results_round5.md  qa_results_round6.md  quiz-5-final.md  quiz-5-fixed-final.md  quiz-5-fixed-v2.md  quiz-5-fixed-v3.md  quiz-5-fixed.md  quiz-5-padded-final-fixed-randomized.md  quiz-5-padded-final-fixed.md  quiz-5-padded-final.md  randomize_exam.py  (+32 more)
.antigravity/: browserAllowlist.txt  user_settings.pb
.claude/agents/: exam-architect.md  exam-critic.md  exam-question-writer.md
config/: exam-models.yml
criminal-law/chapters/: 02-why-how-punish.qmd  03-what-we-punish.qmd  04-jury.qmd  05-legislatures-courts.qmd  06-prosecutors.qmd  07-voluntary-act.qmd  08-causation.qmd  09-omissions.qmd  10-mistake.qmd  11-public-welfare.qmd  12-intentional-homicide.qmd  13-unintentional-homicide.qmd  14-felony-murder-misdemeanor-manslaughter.qmd  15-reform-drugs-guns.qmd  (+16 more)
scripts/: post_process_exams.py
(+1894 files in other folders)
